<resources>
    <string name="app_name">pass_data_screen_to_screen</string>
    <string name="cafe_name">Welcome to Dil Cafe</string>
    <string name="customer_name">Enter your name</string>
    <string name="order_now">Order Now!</string>
    <string name="first_order">Enter Order 1</string>
    <string name="second_order">Enter Order 2</string>
    <string name="third_order">Enter Order 3</string>
</resources>