<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cafe_name"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/customerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="15dp"
        android:inputType="text"
        android:text="@string/customer_name"
        />

    <EditText
        android:id="@+id/firstOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="15dp"
        android:inputType="text"
        android:text="@string/first_order" />

    <EditText
        android:id="@+id/secondOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="15dp"
        android:inputType="text"
        android:text="@string/second_order" />

    <EditText
        android:id="@+id/thirdOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="15dp"
        android:inputType="text"
        android:text="@string/third_order"
        />

    <Button
        android:id="@+id/orderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_now"
        android:layout_gravity="center"
        />
</LinearLayout>